# all2ics

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml  test_timezone_sample.json
docs/: RRULE_GUIDE.md
examples/: master_prompt_guide.md  rrule_examples.json  sample_input.json
src/all2ics/: __init__.py  cli.py  converter.py  schema.py
tests/: test_converter.py
